<resources>
    <string name="app_name">Rojgar</string>
    <string name="navigation_drawer_close">SIHC</string>
    <string name="navigation_drawer_open">SIHO</string>
    <string name="top_categories">Top Categories</string>
    <string name="bank_jobs" translatable="false">Bank Jobs</string>
    <string name="engineering_jobs">Engineering Jobs</string>
    <string name="designer_jobs">Designer Jobs</string>
    <string name="managing_jobs">Managing Jobs</string>
    <string name="clerk_jobs">Clerk Jobs</string>
    <string name="railway_jobs">Railway Jobs</string>
    <string name="police_jobs">Police Jobs</string>
    <string name="teaching_jobs">Teaching Jobs</string>
    <string name="forest_department_jobs">Forest Department Jobs</string>
    <string name="mall_tenders">Mall Tenders</string>
    <string name="road_tenders">Road Tenders</string>
    <string name="bridge_tenders">Bridge Tenders</string>
    <string name="housing_board_tenders">Housing Board Tenders</string>
    <string name="editor_jobs">Editor Jobs</string>
    <string name="writer_jobs">Writer Jobs</string>
    <string name="details">Details</string>
    <string name="register">Register</string>
    <string name="title">Job Title: </string>
    <string name="desc">Job Description: </string>
    <string name="exp">Work Experience: </string>
    <string name="city">Reporting City: </string>
    <string name="email">Contact E-mail: </string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="english">Eng</string>
    <string name="loading">Loading…</string>
    <string name="error">There is some error</string>
    <string name="check_internet1">कृपया अपने इंटरनेट कनेक्शन की जाँच करें</string>
    <string name="loading1">लोड हो रहा है…</string>
    <string name="top_categories1">शीर्ष श्रेणियां</string>
    <string name="bank_jobs1">बैंक नौकरियां</string>
    <string name="engineering_jobs1">इंजीनियरिंग नौकरियां</string>
    <string name="designer_jobs1">डिजाइनर नौकरियां</string>
    <string name="managing_jobs1">प्रबंध नौकरियां</string>
    <string name="clerk_jobs1">क्लर्क नौकरियां</string>
    <string name="railway_jobs1">रेलवे नौकरियों</string>
    <string name="police_jobs1">पुलिस नौकरियां</string>
    <string name="teaching_jobs1">शिक्षण नौकरियां</string>
    <string name="forest_department_jobs1">वन विभाग नौकरियां</string>
    <string name="mall_tenders1">मॉल निविदाएं</string>
    <string name="road_tenders1">सड़क निविदाएं</string>
    <string name="bridge_tenders1">पुल निविदाएं</string>
    <string name="housing_board_tenders1">आवास मंडल निविदाएं</string>
    <string name="editor_jobs1">संपादक नौकरियां</string>
    <string name="writer_jobs1">लेखक नौकरियां</string>
    <string name="more_info1">अधिक जानकारी</string>
    <string name="details1">विवरण</string>
    <string name="register1">रजिस्टर करें</string>
    <string name="phone1">अपना फ़ोन दर्ज करें</string>
    <string name="login1">लॉग इन</string>
    <string name="password1">अपना पासवर्ड दर्ज करें</string>
    <string name="name1">अपना नाम दर्ज करें</string>
    <string name="username1">अपना यूज़रनेम दर्ज करें</string>
    <string name="reenter1">पुनः पासवर्ड दर्ज करें</string>
    <string name="date1">जन्मतिथि दर्ज करें</string>
    <string name="already1">पहले से रजिस्टर्ड?</string>
    <string name="skip1">छोड़ें-></string>
    <string name="next1">आगे</string>
    <string name="tenth1">कक्षा 10 वीं का रिजल्ट (मार्कशीट)</string>
    <string name="twelfth1">कक्षा 12 वीं का रिजल्ट (मार्कशीट)</string>
    <string name="graduation1">स्नातक परिणाम (मार्कशीट)</string>
    <string name="upload1">दस्तावेज अपलोड करें</string>
    <string name="textViewStatus1">किसी भी फाइल का चयन नहीं</string>
    <string name="textViewStatus2">फाईल सफलता पूर्वक अपलोड हुई</string>
    <string name="uploaded1">अपलोड किए गए</string>
    <string name="permission1">कृपया स्टोरेज अनुमति प्रदान करें</string>
    <string name="user_not_found1">उपयोगकर्ता नहीं मिला</string>
    <string name="incorrect_password1">गलत पासवर्ड</string>
    <string name="logging_in1">लॉग इन हो रहा है...</string>
    <string name="registering1">रजिस्टर हो रहा है...</string>
    <string name="sending_otp1">ओ टी पी भेजा जा रहा है...</string>
    <string name="must_be_filled1">भरा जाना आवश्यक</string>
    <string name="too_short1">कम से कम 5 अक्षर होने चाहिए</string>
    <string name="valid1">कृपया मान्य नंबर दर्ज करें</string>
    <string name="incorrect_dob1">गलत जन्मतिथि प्रारूप</string>
    <string name="passwords_matching1">पासवर्ड मेल नहीं खा रहे हैं</string>
    <string name="user_exists1">उपयोगकर्ता पहले से मौजूद है</string>
    <string name="otp_sent1">ओ टी पी भेजा गया</string>
    <string name="verify_otp1">ओटीपी दर्ज करें</string>
    <string name="resend_otp1">ओटीपी पुनः भेजें</string>
    <string name="verify_otp_btn1">ओटीपी सत्यापित करें</string>
    <string name="verification_failed1">सत्यापन विफल, अमान्य ओटीपी</string>
    <string name="registration_successful1">पंजीकरण सफलतापूर्वक किया गया</string>
    <string name="verification_successful1">सत्यापन सफलतापूर्वक किया गया</string>
    <string name="verifying1">सत्यापित हो रहा है...</string>
    <string name="switch1">भाषा बदलें</string>
    <string name="logout1">लॉग आउट</string>
    <string name="rate1">हमें रेटिंग दें</string>
    <string name="welcome1">रोजगार ऐप में आपका स्वागत है</string>
    <string name="rate_title1">इस ऐप्लिकेशन को रेट करे</string>
    <string name="poor1">अनुपयुक्त</string>
    <string name="just_so_so1">ठीक ठाक</string>
    <string name="not_bad1">संतोषजनक</string>
    <string name="good_job1">बढ़िया</string>
    <string name="amazing1">अति उत्कृष्ट</string>
    <string name="no_points1">कोई अंक नहीं</string>
    <string name="not_rated1">आपने अभी तक रेट नहीं किया है</string>
    <string name="thanks_for_feedback1">आपकी प्रतिक्रिया के लिए धन्यवाद</string>
    <string name="give_feedback1">प्रतिक्रिया दें</string>
    <string name="government_jobs1">सरकारी नौकरियां</string>
    <string name="non_government_jobs1">गैर सरकारी नौकरियां</string>
    <string name="tenders1">निविदाएं</string>
    <string name="space1">कृपया यहां स्पेस का उपयोग न करें</string>
    <string name="freelancing1">फ़्रीलांसिंग</string>
    <string name="resend_message1">के बाद पुनः भेजें</string>
    <string name="password_updated1">पासवर्ड सफलतापूर्वक परिवर्तित किया गया</string>
    <string name="change_password1">पासवर्ड परिवर्तित करें</string>
    <string name="change_username1">यूज़रनेम परिवर्तित करें</string>
    <string name="change_name1">नाम परिवर्तित करें</string>
    <string name="change_phone1">फ़ोन परिवर्तित करें</string>
    <string name="update_qualification_certificates1">योग्यता प्रमाण पत्र अद्यतन करें</string>
    <string name="go_to_profile1">प्रोफ़ाइल पर जाएं</string>
    <string name="verify1">सत्यापित करें</string>
    <string name="contact_us1">संपर्क करें</string>
    <string name="old_password1">अपना पुराना पासवर्ड दर्ज करें</string>
    <string name="new_password1">अपना नया पासवर्ड दर्ज करें</string>
    <string name="confirm_password1">अपने पासवर्ड की पुष्टि करें</string>
    <string name="error1">कुछ त्रुटि है</string>
    <string name="name_change1">क्लिक करने से पहले कृपया अपना नाम बदलें</string>
    <string name="username_change1">क्लिक करने से पहले कृपया अपना यूज़रनेम बदलें</string>
    <string name="phone_change1">क्लिक करने से पहले कृपया अपना फ़ोन बदलें</string>
    <string name="name_updated1">नाम सफलतापूर्वक परिवर्तित किया गया</string>
    <string name="username_updated1">यूज़रनेम सफलतापूर्वक परिवर्तित किया गया</string>
    <string name="phone_updated1">फ़ोन सफलतापूर्वक परिवर्तित किया गया</string>
    <string name="phone_verify1">फ़ोन सत्यापित करें</string>
    <string name="profile1">प्रोफ़ाइल</string>
    <string name="phone_changed1">आपका फ़ोन नंबर बदल दिया गया है</string>
    <string name="msg_token_fmt">%s</string>
    <string name="username_dob_incorrect">उपयोगकर्ता नाम या जन्म तिथि गलत है</string>
    <string name="forgot_password1">पासवर्ड भूल गए?</string>
    <string name="account_deleted1">आपका खाता हटा दिया गया है</string>
    <string name="want_to_delete">Do you really want to delete your account ?</string>
    <string name="want_to_delete1">क्या आप वास्तव में अपना खाता हटाना चाहते हैं?</string>
    <string name="yes1">हाँ</string>
    <string name="no1">नहीं</string>
    <string name="delete_your_account1">अपना खाता हटाएं</string>
    <string name="atleast_one_option">कृपया कम से कम एक विकल्प चुनें</string>
    <string name="atmost_three_sectors">आप अधिकतम तीन क्षेत्रों का चयन कर सकते हैं</string>
    <string name="congrats_premium">बधाई !, अब आप एक प्रीमियम सदस्य हैं</string>
    <string name="congrats">बधाई !</string>
    <string name="premium_member">अब आप एक प्रीमियम सदस्य हैं</string>
    <string name="publish_your_job1">नौकरी प्रकाशित करें</string>
    <string name="career_roadmap1">कैरियर रोडमैप</string>
    <string name="top_jobs1">शीर्ष नौकरियां</string>
    <string name="get_started1">शुरू करें</string>
    <string name="fields_question1">आप किस कैरियर के लिए इच्छुक हैं?</string>
    <string name="it_sector1">आईटी सेक्टर</string>
    <string name="agriculture_sector1">कृषि क्षेत्र</string>
    <string name="bank_sector1">बैंक क्षेत्र</string>
    <string name="marketing_sector1">विपणन क्षेत्र</string>
    <string name="education_sector1">शिक्षा क्षेत्र</string>
    <string name="get_roadmap1">रोडमैप प्राप्त करें</string>
    <string name="benefits_of_premium1">प्रीमियम के फायदे</string>
    <string name="roadmap1">हमने आपको कुछ ट्रेंडिंग जॉब फील्ड्स के लिए रोड मैप दिया है</string>
    <string name="roadmap">क्या आप अपने करियर की योजना बनाना चाहते हैं?</string>
    <string name="display_jobs1">सभी नौकरियां प्रदर्शित करें</string>
    <string name="benefits">&#8226; Find your Dream Jobs\n\n&#8226; Get a Roadmap to begin the journey to your Dream Job\n\n&#8226; Get Premium Profile badge\n\n&#8226; No ads</string>
    <string name="benefits1">&#8226; अपने ड्रीम जॉब खोजें\n\n&#8226; अपनी ड्रीम जॉब की यात्रा शुरू करने के लिए एक रोडमैप प्राप्त करें\n\n&#8226; प्रीमियम प्रोफ़ाइल बैज प्राप्त करें\n\n&#8226; विज्ञापन नहीं</string>
    <string-array name="jobtype">
        <item>Select Job Type</item>
        <item>Government</item>
        <item>Private</item>
        <item>Tender</item>
        <item>Freelancing</item>
    </string-array>
    <string-array name="jobtype1">
        <item>नौकरी के प्रकार का चयन करें</item>
        <item>सरकारी नौकरियां</item>
        <item>गैर सरकारी नौकरियां</item>
        <item>निविदाएं</item>
        <item>फ़्रीलांसिंग</item>
    </string-array>
</resources>
